Made the calendar animation more "natural" and subtle. Fixed expand/collapse all/add buttons of collapsible. The bug was caused because I removed the href="javascript://" attributes.. the :link selector will not catch a element without a href attribute (so I removed them..).

--- a/media/css/tools.css
+++ b/media/css/tools.css
@@ -57,7 +57,7 @@ h1 + .tools a {
     border-radius: 15px; -moz-border-radius: 15px; -webkit-border-radius: 15px;
     opacity: .6;
 }
-h1 + .tools a:link, h1 + .tools a:visited {
+h1 + .tools a, h1 + .tools a:visited {
     color: #fff;
     background: #444;
     background: -moz-linear-gradient(top, #666, #444);
@@ -131,7 +131,7 @@ h1 + .tools a.focus {
     right: 1px;
 }
 .group.ui-collapsible-closed h2+.tools {
-    display:none!important;
+    /*display:none!important;*/
 }
 .module.ui-collapsible-closed h2+.tools {
     top: -28px;
@@ -236,7 +236,7 @@ h1 + .tools a.focus {
 
 /*  Icons ................................................... */
 
-.tools a.drag-handler:link, .tools a.drag-handler:visited {
+.tools a.drag-handler, .tools a.drag-handler:visited {
     background-image: url('../img/icons/icon-tools-drag-handler.png');
 }
 .tools a.drag-handler:hover, .tools a.drag-handler:active {
@@ -246,7 +246,7 @@ h1 + .tools a.focus {
     display: none;
 }
 
-.tools a.viewsite-link:link, .tools a.viewsite-link:visited {
+.tools a.viewsite-link, .tools a.viewsite-link:visited {
     background-image: url('../img/icons/icon-tools-viewsite-link.png');
     opacity: .4;
 }
@@ -254,37 +254,37 @@ h1 + .tools a.focus {
     background-image: url('../img/icons/icon-tools-viewsite-link-hover.png');
 }
 
-.tools a.delete-handler:link, .tools a.delete-handler:visited, 
+.tools a.delete-handler, .tools a.delete-handler:visited, 
 .predelete .tools a.delete-handler:hover, .predelete .tools a.deletelink:active {
     background-image: url('../img/icons/icon-tools-delete-handler.png');
 }
 .tools a.delete-handler:hover, .tools a.delete-handler:active, 
-.predelete .tools a.delete-handler:link, .predelete .tools a.delete-handler:visited {
+.predelete .tools a.delete-handler, .predelete .tools a.delete-handler:visited {
     background-image: url('../img/icons/icon-tools-delete-handler-hover.png');
 }
 
-.tools a.remove-handler:link, .tools a.remove-handler:visited {
+.tools a.remove-handler, .tools a.remove-handler:visited {
     background-image: url('../img/icons/icon-tools-remove-handler.png');
 }
 .tools a.remove-handler:hover, .tools a.remove-handler:active {
     background-image: url('../img/icons/icon-tools-remove-handler-hover.png');
 }
 
-.tools a.add-handler:link, .tools a.add-handler:visited {
+.tools a.add-handler, .tools a.add-handler:visited {
     background-image: url('../img/icons/icon-tools-add-handler.png');
 }
 .tools a.add-handler:hover, .tools a.add-handler:active {
     background-image: url('../img/icons/icon-tools-add-handler-hover.png');
 }
 
-.tools a.ui-collapsible-open-all:link, .tools a.ui-collapsible-open-all:visited {
+.tools a.ui-collapsible-open-all, .tools a.ui-collapsible-open-all:visited {
     background-image: url('../img/icons/icon-tools-open-handler.png');
 }
 .tools a.ui-collapsible-open-all:hover, .tools a.ui-collapsible-open-all:active {
     background-image: url('../img/icons/icon-tools-open-handler-hover.png');
 }
 
-.tools a.ui-collapsible-close-all:link, .tools a.ui-collapsible-close-all:visited {
+.tools a.ui-collapsible-close-all, .tools a.ui-collapsible-close-all:visited {
     background-image: url('../img/icons/icon-tools-close-handler.png');
 }
 .tools a.ui-collapsible-close-all:hover, .tools a.ui-collapsible-close-all:active {
